MZ-124 added wishlist to auction tiles

--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -33,6 +33,10 @@
     border: 1px solid @lightgrey;
     text-align: center;
 
+    a {
+        font-size: @font-size - 0.3 !important;
+    }
+
     .auction-tile-row {
         padding: 6px;
     }
