--- a/src/Mzayad.Web/Content/site-home.less
+++ b/src/Mzayad.Web/Content/site-home.less
@@ -42,7 +42,7 @@
                 font-size: @font-size + 0.2;
                 text-transform: uppercase;
             }
-            
+
             .auction-status-loading {
                 padding: 15px;
                 font-size: @font-size + 0.2;
@@ -134,7 +134,7 @@
                 }
 
                 .auction-bid-form {
-                    
+
                     .form-control,
                     .btn-default {
                         font-size: @font-size + 1;
@@ -185,6 +185,21 @@
 
                     .auction-recent-bidamount {
                         padding: 4px 0;
+                    }
+                }
+
+                .auction-action-buttons {
+                    margin: 0 -10px;
+                    padding: 0;
+                    list-style: none;
+
+                    li {
+                        float: left;
+                        padding: 10px;
+
+                        a {
+                            font-size: @font-size - 0.2 !important;
+                        }
                     }
                 }
             }
