--- a/src/Mzayad.Web/Content/site-typography.less
+++ b/src/Mzayad.Web/Content/site-typography.less
@@ -13,7 +13,7 @@ body > div {
 
 h1, h2, h3, h4 {
     margin-top: 0;
-    margin-bottom: 1em;
+    margin-bottom: 20px;
 }
 
 h1 {
@@ -29,7 +29,7 @@ h3 {
 }
 
 p, ul, ol, ul ul, ol ul, ul ol, ol ol {
-    margin-bottom: 1em;
+    margin-bottom: 20px;
 }
 
 .lead {
