--- a/src/Mzayad.Web/Views/WishList/Add.cshtml
+++ b/src/Mzayad.Web/Views/WishList/Add.cshtml
@@ -27,7 +27,7 @@
             </section>
 
             <section class="form-buttons">
-                <button type="submit" class="btn btn-default">@Global.AddNewItem</button>
+                <button type="submit" class="btn btn-default">@Global.AddToWishList</button>
             </section>
         }
     </div>
