--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -75,6 +75,14 @@ body {
   background-image: none;
 }
 
+#header-subscription {
+    padding-top: 10px;
+
+    a {
+        text-decoration: none !important;
+    }
+}
+
 #page-title {
     padding-bottom: 0.5em;
     border-bottom: 1px solid #eee;
