MZ-125 added AutoBid service, controller, and views

--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
         </nav>
     </div>
     <div class="container">
-        @Html.Action("SubscriptionStatus", "Home")
+        @Html.Action("SubscriptionStatus", "Home", new { area = "" })
         <nav class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left navbar-main">
                 <li>@Html.ActionLink(Global.Home, "Index", "Home", routeValues, null)</li>
