--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
                         </div>
 
                         <ul class="auction-action-buttons">
-                            <li data-bind="if: buyNowEnabled">
+                            <li data-bind="visible: buyNowEnabled">
                                 <a class="btn btn-default btn-rounded" data-bind="attr: { href: buyNowUrl }">@Global.BuyNow</a>
                             </li>
                             <li>
@@ -277,7 +277,7 @@
                 }
             }
 
-            //$.connection.hub.logging = true;
+           $.connection.hub.logging = true;
 
             @if (!Request.IsLocal)
             {
