MZ-121 add cms page management  to the prject

--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
             <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-fw fa-pad-right fa-user"></i>Users</a></li>
             <li><a href="@Url.Action("Index", "Orders")"><i class="fa fa-fw fa-pad-right fa-truck"></i>Orders</a></li>
             <li><a href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-gavel"></i>Auctions</a></li>
+            <li><a href="@Url.Action("Index", "PageManagement")"><i class="fa fa-fw fa-pad-right fa-file"></i>Pages</a></li>
             <li><a href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-cube"></i>Products</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
             <li class="sub-menu-item"><a href="@Url.Action("Index", "Specifications")"><i class="fa fa-fw fa-pad-right fa-reorder"></i>Specifications</a></li>
