--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -59,10 +59,10 @@
         <nav class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left navbar-main">
                 <li>@Html.ActionLink(Global.Home, "Index", "Home", routeValues, null)</li>
-                <li>@Html.ActionLink(Global.About, "About", "Home", routeValues, null)</li>
+                <li>@Html.ActionLink(Global.About, "Index", "Pages", new { Area = "", Language = LanguageCode, Slug = "about"}, null)</li>
                 <li>@Html.ActionLink(Global.BuyNow, "BuyNow", "Home", routeValues, null)</li>
                 <li>@Html.ActionLink(Global.BuySubscription, "Index", "Subscriptions", routeValues, null)</li>
-                <li>@Html.ActionLink(Global.ContactUs, "ContactUs", "Home", routeValues, null)</li>
+                <li>@Html.ActionLink(Global.ContactUs, "Index", "Pages", new { Area = "", Language = LanguageCode, Slug = "contact-us" }, null)</li>
             </ul>
         </nav>
 
