--- a/src/Mzayad.Web/Views/User/EditProfile.cshtml
+++ b/src/Mzayad.Web/Views/User/EditProfile.cshtml
@@ -35,7 +35,7 @@
                     }
                 </div>
                 <div class="form-group">
-                    <label>Global.ProfileURL</label>
+                    <label>@Global.ProfileURL</label>
                     @Html.TextBoxFor(i => i.User.ProfileUrl, new { @class = "form-control", @readonly = true })
                 </div>
 
