--- a/src/Mzayad.Web/Content/site-admin.css
+++ b/src/Mzayad.Web/Content/site-admin.css
@@ -14,5 +14,14 @@
   color: #b94a48;
 }
 .text-warning {
-  color: #d9a300;
+  color: #D9A300;
+}
+.user-avatar {
+  width: 100px;
+  height: 100px;
+  float: right;
+}
+.img-cell {
+  width: 40px;
+  height: 40px;
 }
