--- a/src/Mzayad.Web/Content/site-admin.less
+++ b/src/Mzayad.Web/Content/site-admin.less
@@ -23,3 +23,14 @@
 .text-warning {
     color: @warning;
 }
+
+.user-avatar {
+    width: 100px;
+    height: 100px;
+    float: right;
+}
+
+.img-cell {
+    width: 40px;
+    height: 40px;
+}
