MZ-151 add sponsor ribbon for closed auctions

--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -795,6 +795,24 @@ input[type="checkbox"].input-validation-error {
 }
 .auction-tile .auction-tile-image {
   padding: 10px;
+  position: relative;
+}
+.auction-tile .sponsor-ribbon {
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  background: transparent url(https://az723232.vo.msecnd.net/assets/slack-imgscom-red-636076343102313840.png) center right no-repeat;
+}
+.auction-tile .sponsor-ribbon span {
+  color: #FFF;
+  float: left;
+  padding-right: 30px;
+  padding-left: 3px;
+  width: 220px;
+  white-space: nowrap;
+  overflow: hidden;
+  -moz-text-overflow: ellipsis;
+  text-overflow: ellipsis;
 }
 .auction-tile .auction-tile-details {
   padding: 10px;
