--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -5,6 +5,7 @@
 <div class="auction-tile">
     <div class="auction-tile-image">
         <img class="img-responsive" src="@Model.ImageUrl" alt="@Model.Title" />
+        <div class="sponsor-ribbon"><span>@Model.SponsorName</span></div>
     </div>
     <div class="auction-tile-details">
         <h3 class="auction-tile-title auction-tile-row">@Model.Title</h3>
