--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -53,24 +53,6 @@
         position: relative;
     }
 
-     .sponsor-ribbon {
-        position: absolute;
-        left: 0;
-        bottom: 10px;
-        background: transparent url(https://az723232.vo.msecnd.net/assets/slack-imgscom-red-636076343102313840.png) center right no-repeat;
-         span{
-            color: #FFF;
-            float: left;
-            padding-right: 30px;
-            padding-left: 3px;
-            width: 220px;
-            white-space: nowrap;
-            overflow: hidden;
-            -moz-text-overflow: ellipsis;
-            text-overflow: ellipsis;
-        }
-    }
-
     .auction-tile-details {
         padding: 10px;
         border-top: 1px solid #EBEBEB;
@@ -82,5 +64,29 @@
 
     .auction-tile-winning-price {
         font-weight: bold;
+    }
+}
+
+.live-ribbon-container{
+    left:-5px;
+    position:relative;
+}
+
+.sponsor-ribbon {
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    background: transparent url(https://az723232.vo.msecnd.net/assets/slack-imgscom-red-636076343102313840.png) center right no-repeat;
+
+    span {
+        color: #FFF;
+        float: left;
+        padding-right: 30px;
+        padding-left: 3px;
+        width: 220px;
+        white-space: nowrap;
+        overflow: hidden;
+        -moz-text-overflow: ellipsis;
+        text-overflow: ellipsis;
     }
 }
