MZ-152 replace subscription with leve at user dashboard ribbon

--- a/src/Mzayad.Web/Content/site-user.less
+++ b/src/Mzayad.Web/Content/site-user.less
@@ -41,7 +41,7 @@
     .dashboard-padded();
 }
 
-#dashboard-subscription {
+#dashboard-level {
     color: @white !important;
     .dashboard-padded();
 }
