--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -843,7 +843,7 @@ input[type="checkbox"].input-validation-error {
   color: #33ace0;
   padding-bottom: 4px;
 }
-#dashboard-subscription {
+#dashboard-level {
   color: #fff !important;
   padding-bottom: 4px;
 }
