MZ-153 add buy now transactions report

--- a/src/Mzayad.Web/Areas/Reports/Views/Transactions/Knet.cshtml
+++ b/src/Mzayad.Web/Areas/Reports/Views/Transactions/Knet.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row">
-    <div class="col-md-12 @Html.Css().FormWide">
+    <div class="@Html.Css().FormWide">
         @using (Html.BeginForm("Knet", "Transactions", FormMethod.Post, new { @class = "form-inline" }))
         {
             <div class="form-group">
