--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -11,6 +11,11 @@
         #page-title {
             display: none;
         }
+
+        .panel-link {
+            background-color: #33ACE0 !important;
+            margin-right: 5px !important;
+        }
     </style>
 }
 
@@ -119,7 +124,9 @@
     <div class="panel dashboard-panel">
         <div class="panel-heading">
             <h3 class="panel-title text-uppercase">@Global.MyWishList</h3>
-            <div class="pull-right"><a class="text-uppercase" href="@Url.Action("Index", "WishList")">@Global.ViewAll</a></div>
+            <div class="pull-right"><a class="text-uppercase" href="@Url.Action("Index", "WishList")">@Global.ViewAll</a>
+            </div>
+            <div class="pull-right"><a class="text-uppercase panel-link" href="@Url.Action("Add", "WishList")">@Global.AddNewItem</a></div>
             <div class="clearfix"></div>
         </div>
         <div class="panel-body">
