add product details page

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -50,6 +50,7 @@
         <div class="row">
             <div class="col-md-6 live-ribbon-container">
                 <img class="auction-image img-responsive" data-bind="attr: { src: imageUrl, alt: title }" alt="">
+                <img class="auction-image img-responsive" data-bind="attr: { src: imageUrl, alt: title }" alt="">
                 <div class="sponsor-ribbon"><span data-bind="text:sponsorName"></span></div>
             </div>
 
