--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     @Styles.Render("~/css/nivo")
 }
 
-@if (!User.Identity.IsAuthenticated || true)
+@if (!User.Identity.IsAuthenticated)
 {
     <p><img class="img-responsive" src="https://az723232.vo.msecnd.net/assets/hero-movie-635750647415139708.jpg" alt="" /></p>
 }
