MZ-160 comment buy subscription link

--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                 <li>@Html.ActionLink(Global.Home, "Index", "Home", routeValues, null)</li>
                 <li>@Html.ActionLink(Global.HowItWorks, "Index", "Pages", new { Area = "", Language = LanguageCode, Slug = "how-it-works"}, null)</li>
                 <li>@Html.ActionLink(Global.BuyNow, "BuyNow", "Home", routeValues, null)</li>
-                <li>@Html.ActionLink(Global.BuySubscription, "Index", "Subscriptions", routeValues, null)</li>
+                @*<li>@Html.ActionLink(Global.BuySubscription, "Index", "Subscriptions", routeValues, null)</li>*@
                 <li>@Html.ActionLink(Global.ContactUs, "Index", "Pages", new { Area = "", Language = LanguageCode, Slug = "contact-us" }, null)</li>
             </ul>
         </nav>
