MZ-162 add set auto bid button to upcoming auctions

--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -1,4 +1,4 @@
-﻿@using Mzayad.Models
+﻿@using Mzayad.Web.Core.Enums
 @using OrangeJetpack.Base.Core.Formatting
 @model Mzayad.Web.Models.Auctions.AuctionViewModel
 
@@ -15,19 +15,19 @@
         </a>
         <div class="auction-tile-prices auction-tile-row">
             <div class="auction-tile-retail-price">
-                @StringFormatter.ObjectFormat(Global.RetailPriceWithLabel, new {Model.RetailPrice})
+                @StringFormatter.ObjectFormat(Global.RetailPriceWithLabel, new { Model.RetailPrice })
             </div>
             @if (!string.IsNullOrWhiteSpace(Model.WonByAmount))
             {
                 <div class="auction-tile-winning-price">
-                    @StringFormatter.ObjectFormat(Global.WinningPriceWithLabel, new {WinningPrice = Model.WonByAmount})
+                    @StringFormatter.ObjectFormat(Global.WinningPriceWithLabel, new { WinningPrice = Model.WonByAmount })
                 </div>
             }
         </div>
         @if (Model.WonByUserName != null)
         {
             <div class="auction-tile-won-by-avater auction-tile-row">
-                <img src="@Model.WonByAvatarUrl" alt="@Model.WonByUserName" width="64" height="64"/>
+                <img src="@Model.WonByAvatarUrl" alt="@Model.WonByUserName" width="64" height="64" />
                 <div class="auction-title-username">@Model.WonByUserName</div>
             </div>
         }
@@ -35,7 +35,7 @@
         {
             <div class="auction-tile-buynow auction-tile-row">
                 <a class="btn btn-default btn-rounded text-uppercase" href="@Url.Action("BuyNow", "Orders", new {language = LanguageCode, auctionId = Model.AuctionId})">
-                    @StringFormatter.ObjectFormat(Global.BuyNowWithPrice, new {Model.BuyNowPrice})
+                    @StringFormatter.ObjectFormat(Global.BuyNowWithPrice, new { Model.BuyNowPrice })
                 </a>
             </div>
         }
@@ -43,6 +43,13 @@
         <div class="auction-tile-row">
             <a class="btn btn-rounded btn-outline btn-unstyled" href="@Url.Action("Add", "WishList", new {item = HttpUtility.UrlEncode(Model.Title)})">@Global.AddToWishList</a>
         </div>
+
+        @if (Model.Type == AuctionType.UpcomingAuction)
+        {
+            <div class="auction-tile-row">
+                <a class="btn btn-rounded btn-outline btn-unstyled" href="@Url.Action("Edit", "AutoBid", new { auctionId = Model.AuctionId})">@Global.SetAutoBid</a>
+            </div>
+        }
 
     </div>
 </div>
